# THMM

./: .gitignore  ProjectGuide.md  README.md  REPORT.docx  REPORT.md  THCC_presentation.pptx  THCC_spec.md  fib.py  make_caesar.py  make_slides.mjs  make_slides.py  test_cpu.py
THCC/: AST.hs  COVERAGE.md  CodeGen.hs  Main.hs  Parser.hs  THMM.hs  cabal.project  thcc.cabal
THCC/examples/: demo_bezier.thcc  demo_caesar.thcc  demo_e.thcc  demo_projectile.thcc  demo_xor.thcc  pythagoras.thcc  regression.expected.asm  regression.expected.hex  regression.thcc  simple.thcc
THCC/test/: CodeGenSpec.hs  IntegrationSpec.hs  LexerSpec.hs  ParserSpec.hs  PropSpec.hs  Spec.hs
THMM/: cpu.py  verify_demos.py
cpu/: AGENTS.md  test_cpu.py
