cabal-version:      2.2
name:               thcc
version:            0.1.0.0
synopsis:           Compiler from THCC (a tiny C-like language) to THMM machine code
description:
    THCC compiles a tiny C-like language to machine code for THMM, a custom
    single-accumulator CPU. Pipeline: Parser -> CodeGen (symbolic) ->
    linker -> hex/asm/bits output.
author:             heffnt
maintainer:         heffnt@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-unused-do-bind

library
    import:           warnings
    hs-source-dirs:   .
    default-language: Haskell2010
    exposed-modules:
        AST
        Parser
        CodeGen
        THMM
    build-depends:
        base         >= 4.14 && < 5,
        containers   >= 0.6  && < 0.8,
        megaparsec         >= 9.0  && < 10,
        parser-combinators >= 1.3  && < 1.4,
        text               >= 1.2  && < 2.2

executable thcc
    import:           warnings
    main-is:          Main.hs
    hs-source-dirs:   .
    other-modules:
        AST
        Parser
        CodeGen
        THMM
    default-language: Haskell2010
    build-depends:
        base         >= 4.14 && < 5,
        containers   >= 0.6  && < 0.8,
        megaparsec         >= 9.0  && < 10,
        parser-combinators >= 1.3  && < 1.4,
        text         >= 1.2  && < 2.2,
        thcc
    ghc-options:      -threaded

test-suite thcc-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    other-modules:
        LexerSpec
        ParserSpec
        CodeGenSpec
        IntegrationSpec
        PropSpec
    default-language: Haskell2010
    build-depends:
        base         >= 4.14 && < 5,
        containers,
        hspec        >= 2.7  && < 2.12,
        megaparsec,
        QuickCheck,
        text,
        thcc
